[project]
name = "spindler"
version = "0.1.0"
description = ""
authors = [
    { name = "Andrew Moffat", email = "arwmoffat@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "lark>=1.2.2,<2.0.0",
    "jinja2>=3.1.6,<4.0.0"
]

[project.scripts]
spindler = "spindler:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<26.0.0",
    "pytest>=7.3.1,<8.0.0",
    "mypy>=1.15.0,<2.0.0",
    "flake8>=7.1.2,<8.0.0",
    "munch>=4.0.0,<5.0.0",
    "pre-commit>=4.2.0,<5.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
